fix: wrong padding in rtl layout

--- a/src/scss/core/components/_consent-modal.scss
+++ b/src/scss/core/components/_consent-modal.scss
@@ -608,7 +608,7 @@ $footer-links-gap: 1.3em;
         border-bottom-right-radius: var(--cc-btn-border-radius);
 
         & + .cm__texts .cm__title {
-            padding-right: unset;
+            padding-right: $sections-padding-x;
             padding-left: 2em;
         }
     }
